fixed spacing and added email

--- a/css/style.css
+++ b/css/style.css
@@ -877,3 +877,16 @@ header {
 	text-align: center;
 	padding: 30px 0;
 }
+
+.appHeaderBar img {
+	float: left;
+	width: 400px;
+	height: 400px;
+	margin-right: 100px;
+  }
+  
+  .h1Header h1 {
+	position: relative;
+	top: 18px;
+	left: 10px;
+  }
